# z2p

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  deny.toml  run.sh  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-2b9259e394e6178d7f0217ecc675c7e8ae302d0a96416ed9814d0c1c57107d5e.json  query-4d387dff94772da616a98ecbe0cbc5c49e81aa37be0e8c0ed6683cf4f5e60bfa.json  query-7a1efc6ed46b82e3d631364c4318a904222b4ef8ab8ea9418ac6059437e536ce.json  query-e6e03c02d661bfee4c6e927476e95b305ee165b1c68276d10ad588346cf202a6.json  query-f0154244fd7e48106ab61edd367db350272ca3f870802ee5ac3eb4b9c084d5cf.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20251024052250_seed_user.sql
scripts/: init_db.sh  init_redis.sh  run.sh  run_sepecific_test_and_grep.sh  test_specific_case_with_details.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: confirmation_token.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  helpers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  mod.rs
src/routes/admin/newsletters/post/: errors.rs  mod.rs  newsletters_handler.rs  types.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
src/routes/newsletters/: errors.rs  helpers.rs  mod.rs  newsletters_handler.rs  types.rs
src/routes/subscriptions/: errors.rs  helpers.rs  mod.rs  subscriptions.rs  subscriptions_handler.rs  types.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  admin_newsletter.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
views/: change_password_form.html  confirm_subscription_letter.html  dashboard.html  login.html  send_newsletters_form.html
