[package]
name = "z2p"
version = "0.1.0"
license = "MIT"
edition = "2024"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.11.0"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1.16.0", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.18"
tracing-error = "0.2.1"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
rand = "0.9.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }



[dependencies.sqlx]
version = "0.8.5"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
claim = "0.5.0"
fake = "4.3.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
