[package]
name = "z2p"
version = "0.1.0"
license = "MIT"
edition = "2024"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.11.0"
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
tracing-error = "0.2.1"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
rand = { version = "0.9.2", features = ["std_rng"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tera = "1.20.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
base64 = "0.22.1"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
serde_json = "1.0.145"



[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.145"
wiremock = "0.6.5"
